--- a/public/assets/css/themes/creative.css
+++ b/public/assets/css/themes/creative.css
@@ -13,8 +13,8 @@ body {
 }
 
 #content {
-  background-image: url(../../demo/bg/creative-content-bg.png);
-  background-color: #fff6ed;
+  background-image: url(../../demo/bg/bg-landing.png);
+  background-color: #fff;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center top;
@@ -119,3 +119,100 @@ h6 {
     color: #ffd500 !important;
   }
 }
+
+.spin {
+    color:#14a699;
+    position: absolute;
+    opacity: 0;
+    padding-left: 10px;
+  }
+  /* .spin:after {
+    content:"";
+    animation: spin 20s  infinite;
+  } */
+  /* @keyframes spin {
+    10% { content:"dolor"; }
+    50% { content:"Guten Tag"; }
+  } */
+
+  .w1 {
+    animation: w1anim 20s infinite;
+  }
+
+  .w2 {
+    animation: w2anim 20s infinite;
+  }
+
+  .w3 {
+    animation: w3anim 20s infinite;
+  }
+
+  .w4 {
+    animation: w4anim 20s infinite;
+  }
+
+  .w5 {
+    animation: w5anim 20s infinite;
+  }
+
+  @keyframes w1anim {
+    0%{
+      opacity: 0;
+    }
+    10%{
+      opacity: 1;
+    }
+    20% {
+      opacity:0;
+    }
+  }
+
+
+  @keyframes w2anim {
+    20%{
+      opacity: 0;
+    }
+    30%{
+      opacity: 1;
+    }
+    40% {
+      opacity:0;
+    }
+  }
+
+  @keyframes w3anim {
+    40%{
+      opacity: 0;
+    }
+    50%{
+      opacity: 1;
+    }
+    60% {
+      opacity:0;
+    }
+  }
+
+  @keyframes w4anim {
+    60%{
+      opacity: 0;
+    }
+    70%{
+      opacity: 1;
+    }
+    80% {
+      opacity:0;
+    }
+  }
+
+  @keyframes w5anim {
+    80%{
+      opacity: 0;
+    }
+    90%{
+      opacity: 1;
+    }
+    100% {
+      opacity:0;
+    }
+  }
+
